--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gourmet2Go</title>
+    <title></title>
 
     <meta name="description" content="Gourmet2Go - Food delivery and Restaurant HTML Template" />
     <meta name="author" content="George_Fx">
